# rustbreak

./: .travis.yml  Cargo.toml  LICENSE  README.md  index.html  search-index.js  test.ron
.github/: main.workflow
.github/workflows/: audit.yaml  build.yml
bincode/: Bounded.t.html  Deserializer.t.html  Infinite.t.html  Serializer.t.html  SizeLimit.t.html  enum.ErrorKind.html  fn.deserialize.html  fn.deserialize_from.html  fn.serialize.html  fn.serialize_into.html  fn.serialized_size.html  fn.serialized_size_bounded.html  index.html  serialized_size_bounded.v.html  sidebar-items.js  struct.Bounded.html  struct.Infinite.html  trait.SizeLimit.html  type.Deserializer.html  type.Error.html  type.Result.html  type.Serializer.html
bincode/endian_choice/: fn.deserialize.html  fn.deserialize_from.html  fn.serialize.html  fn.serialize_into.html  index.html  sidebar-items.js  struct.Deserializer.html  struct.Serializer.html
bincode/refbox/: RefBox.t.html  SliceBox.t.html  StrBox.t.html  index.html  struct.RefBox.html  struct.SliceBox.html  struct.StrBox.html
bincode/serde/: fn.deserialize.html  fn.deserialize_from.html  fn.serialize.html  fn.serialize_into.html  fn.serialized_size.html  fn.serialized_size_bounded.html
examples/: config.rs  full.rs  migration.rs.incomplete  simple.rs  switching.rs
examples/server/: Cargo.toml  server.ron
examples/server/src/: main.rs
examples/server/templates/: index.hbs
fs2/: FsStats.t.html  fn.allocation_granularity.html  fn.available_space.html  fn.free_space.html  fn.lock_contended_error.html  fn.statvfs.html  fn.total_space.html  index.html  sidebar-items.js  struct.FsStats.html  trait.FileExt.html
implementors/bincode/: trait.SizeLimit.js
new_version/: index.html  search-index.js
new_version/base64/: enum.DecodeError.html
new_version/bincode/: enum.ErrorKind.html  fn.config.html  fn.deserialize.html  fn.deserialize_from.html  fn.deserialize_from_custom.html  fn.serialize.html  fn.serialize_into.html  fn.serialized_size.html  index.html  struct.Config.html  trait.BincodeRead.html  type.Error.html  type.Result.html
new_version/linked_hash_map/: enum.Entry.html  index.html  struct.Entries.html  struct.IntoIter.html  struct.Iter.html  struct.IterMut.html  struct.Keys.html  struct.LinkedHashMap.html  struct.OccupiedEntry.html  struct.VacantEntry.html  struct.Values.html
new_version/ron/: index.html
new_version/rustbreak/: FileDatabase.t.html  MemoryDatabase.t.html  index.html  sidebar-items.js  struct.Database.html  type.FileDatabase.html  type.MemoryDatabase.html
new_version/serde/: macro.forward_to_deserialize_any.html  trait.Deserialize.html  trait.Deserializer.html  trait.Serialize.html  trait.Serializer.html
new_version/serde_derive/: fn.derive_deserialize.html  fn.derive_serialize.html  index.html
new_version/serde_yaml/: enum.Value.html  fn.from_reader.html  fn.from_slice.html  fn.from_str.html  fn.from_value.html  fn.to_string.html  fn.to_value.html  fn.to_vec.html  (+9 more)
quick_error/: index.html  macro.quick_error.html  sidebar-items.js  struct.Context.html  trait.ResultExt.html
rustbreak/: Lock.t.html  TransactionLock.t.html  enum.BreakError.html  index.html  sidebar-items.js  struct.Database.html  struct.Lock.html  struct.Transaction.html  struct.TransactionLock.html  type.Result.html
src/: backend.rs  bincode_enc.rs  deser.rs  error.rs  lib.rs  ron_enc.rs  yaml_enc.rs
tests/: integration_tests.rs
(+433 files in other folders)
