[package]
authors = ["Marcel Müller <neikos@neikos.email>"]
description = "A single point database"
documentation = "http://neikos.me/rustbreak/rustbreak/index.html"
homepage = "https://github.com/TheNeikos/rustbreak"
keywords = ["database", "simple", "fast", "daybreak", "rustbreak"]
license = "MPL-2.0"
name = "rustbreak"
readme = "README.md"
repository = "https://github.com/TheNeikos/rustbreak"
version = "2.0.0"

[dependencies]
failure = "0.1.1"
lazy_static = "1.0.0"
ron = "0.1.2"
serde = "1"

[dependencies.base64]
optional = true
version = "0.7.0"

[dependencies.bincode]
optional = true
version = "0.8.0"

[dependencies.serde_yaml]
optional = true
version = "0.7"

[dev-dependencies]
serde_derive = "1"
tempfile = "2.1"

[features]
bin = ["bincode", "base64"]
yaml = ["serde_yaml"]
ron_enc = ["ron"]
