[package]
authors = ["Marcel Müller <neikos@neikos.email>"]
categories = ["database-implementations"]
description = "A modular and configurable database"
documentation = "https://docs.rs/rustbreak"
edition = "2018"
homepage = "https://github.com/TheNeikos/rustbreak"
keywords = ["database", "simple", "fast", "rustbreak"]
license = "MPL-2.0"
name = "rustbreak"
readme = "README.md"
repository = "https://github.com/TheNeikos/rustbreak"
version = "2.0.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
serde = "1"
tempfile = "3"
thiserror = "1.0.20"

[dependencies.ron]
optional = true
version = "0.6"

[dependencies.base64]
optional = true
version = "0.12"

[dependencies.bincode]
optional = true
version = "1"

[dependencies.serde_yaml]
optional = true
version = "0.8.5"

[dependencies.memmap]
optional = true
version = "0.7"

[dependencies.anyhow]
optional = true
version = "1.0.32"

[dev-dependencies]
lazy_static = "1"
serde_derive = "1"

[features]
default = []
ron_enc = ["ron"]
bin_enc = ["bincode", "base64"]
yaml_enc = ["serde_yaml"]
other_errors = ["anyhow"]
mmap = ["memmap"]

